# aetherguard-aiops

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/: anomaly_detector.py  chaos_engineer.py  remediation_planner.py  root_cause_analyst.py  state.py  supervisor.py  tools.py
agents/prompts/: chaos_prompt.py  rca_prompt.py  remediation_prompt.py
backend/: dependencies.py  main.py
backend/routes/: agents.py  approval.py  chaos.py  dashboard.py  websocket.py
core/: config.py  events.py  exceptions.py  utils.py
core/simulator/: aws_simulator.py  cost_simulator.py  network_simulator.py
core/simulator/scenarios/: cpu_spike.yaml  latency_flood.yaml  pod_crash.yaml  port_exposure.yaml
frontend/: streamlit_app.py
