[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherguard-aiops"
version = "0.1.0"
description = "Agentic Multi-Cloud AIOps Platform with Cost-Aware Self-Healing and Chaos Resilience"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── Core ─────────────────────────────────────────────────────────────────
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # ── ML ───────────────────────────────────────────────────────────────────
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",

    # ── LangChain / LangGraph ─────────────────────────────────────────────────
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-anthropic>=0.1",
    "langgraph>=0.1",

    # ── FastAPI backend ───────────────────────────────────────────────────────
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",

    # ── Simulator ────────────────────────────────────────────────────────────
    "pyyaml>=6.0",

    # ── Dashboard ────────────────────────────────────────────────────────────
    "streamlit>=1.35",
    "plotly>=5.22",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",       # for FastAPI test client
]

[project.scripts]
aetherguard-api = "backend.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "core", "backend"]